<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bliss</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="continue_in_with_google">Continue In With Google</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_into_your_account">Login into\nyour account.</string>
    <string name ="dont_have_an_accoun">Dont Have An Account ?</string>
    <string name ="already_have_an_accoun">Already Have An Account ?</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create\nyour account.</string>
    
    <string name="email_hint">Youremail@gmail.com</string>
    <string name="password_hint">******</string>
    <string name="username_hint">Username</string>
    <string name="phone_number_hint">Phone number</string>
    
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    
    <string name="cancel">Cancel</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="deactivate_account_text">Are you sure you want to deactivate your account?\nBy doing this you will lose all of your saved data and will not be able to retrieve it.</string>
    
    <string name="edit_profile">Edit Profile</string>
    <string name="change_image">Change Image</string>
    
    <string name="profile_information">Profile\nInformation</string>
    <string name="username_change_info">Username cannot can be changed once in a week</string>
    
    <string name="animation">Animation</string>
    <string name="cooking">Cooking</string>
    <string name="coding">Coding</string>
    <string name="photography">Photography</string>
    <string name="traveling">Traveling</string>
    <string name="gaming">Gaming</string>
    
    <string name="intrests">Intrests</string>
    <string name="bio">Bio</string>
    <string name="bio_dis">Madhav\nSingle Charming\n11/10/2004 Save The Date\nLoves Coding, Sleeping, Coding.</string>
    
</resources>