<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:background="@android:color/transparent"
     android:padding="20dp"
     android:orientation="vertical">

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:orientation="horizontal">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:drawablePadding="4dp"
             app:drawableStartCompat="@drawable/alert_icon"
             android:includeFontPadding="false"
             android:fontFamily="@font/poppins_semibold"
             android:textSize="18sp"
             android:drawableTint="#c72229"
             android:textColor="#c72229"
             android:text="@string/deactivate_account" />

    </LinearLayout>

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:includeFontPadding="false"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@android:color/white"
         android:layout_marginTop="12dp"
         android:text="@string/deactivate_account_text" />

    <EditText
         android:layout_height="48dp"
         android:layout_width="match_parent"
         android:drawablePadding="4dp"
         android:elevation="8dp"
         android:textColor="#FFC100"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_background"
         android:hint="@string/password_hint"
         android:includeFontPadding="false"
         android:fontFamily="@font/poppins_regular"
         android:backgroundTint="@null"
         android:drawableEnd="@drawable/eye_close_icon"
         android:paddingHorizontal="12dp"
         android:inputType="textPassword"
         android:autofillHints="password"
         android:id="@+id/deactivate_account_password" />

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_marginTop="12dp"
         style="?android:attr/buttonBarStyle">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             app:backgroundTint="@null"
             android:elevation="8dp"
             android:textSize="16sp"
             android:textColor="@android:color/white"
             android:background="@android:color/transparent"
             android:includeFontPadding="false"
             android:fontFamily="@font/poppins_medium"
             android:textAllCaps="false"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="@string/cancel"
             android:id="@+id/deactivate_dialog_cancel_button" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:background="@drawable/deactivate_account_button_background"
             app:backgroundTint="@null"
             android:elevation="8dp"
             android:includeFontPadding="false"
             style="?android:attr/buttonBarButtonStyle"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:text="@string/deactivate"
             android:id="@+id/deactivate_account_button" />

    </LinearLayout>

</LinearLayout>