<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:paddingEnd="16dp"
     android:orientation="vertical"
     android:paddingStart="16dp"
     android:paddingTop="24dp"
     tools:context=".fragments.ProfileFragment">

    <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_height="128dp"
             android:layout_width="128dp"
             android:src="@drawable/person_icon"
             android:id="@+id/profile_user_main_image" />

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_toEndOf="@id/profile_user_main_image"
             android:orientation="vertical"
             android:layout_marginStart="8dp"
             android:layout_alignBottom="@id/profile_user_main_image">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textAlignment="center"
                 android:includeFontPadding="false"
                 android:fontFamily="@font/poppins_extrabold"
                 android:textColor="@android:color/white"
                 android:layout_marginStart="8dp"
                 android:id="@+id/profile_user_name"
                 android:text="@string/username_hint" />

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textAlignment="center"
                 android:includeFontPadding="false"
                 android:fontFamily="@font/poppins_medium"
                 android:textColor="@android:color/white"
                 android:layout_marginTop="4dp"
                 android:layout_marginStart="8dp"
                 android:id="@+id/profile_user_email"
                 android:text="@string/email_hint" />

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginTop="8dp">

                <Button
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:background="@drawable/intrests_background_button"
                     app:backgroundTint="#1Affffff"
                     android:elevation="8dp"
                     android:includeFontPadding="false"
                     android:fontFamily="@font/poppins_medium"
                     android:textAllCaps="false"
                     android:textColor="@android:color/white"
                     android:layout_weight="1"
                     android:id="@+id/startEditProfileActivity"
                     android:text="@string/edit_profile" />

                <ImageButton
                     android:layout_height="match_parent"
                     android:layout_width="48dp"
                     android:src="@drawable/settings_icon"
                     android:background="@drawable/icon_background_button"
                     android:importantForAccessibility="no"
                     android:layout_marginStart="8dp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@id/profile_user_main_image">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="20sp"
                 android:textColor="@android:color/white"
                 android:layout_marginTop="8dp"
                 android:text="@string/intrests"
                 android:id="@+id/intrests_text" />

            <ImageButton
                 android:layout_height="48dp"
                 android:layout_width="48dp"
                 android:src="@drawable/add_icon"
                 android:layout_below="@id/intrests_text"
                 android:background="@drawable/intrests_background_button"
                 android:importantForAccessibility="no"
                 android:backgroundTint="#1AFFFFFF"
                 android:layout_alignParentStart="true"
                 android:id="@+id/add_intrests" />

            <HorizontalScrollView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:scrollbars="none"
                 android:layout_toEndOf="@id/add_intrests"
                 android:requiresFadingEdge="horizontal"
                 android:clipToPadding="false"
                 android:fadingEdgeLength="24dp"
                 android:layout_alignBottom="@id/add_intrests"
                 android:overScrollMode="never">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:orientation="horizontal"
                     style="?android:attr/buttonBarStyle">

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         app:backgroundTint="#01BEFE"
                         android:elevation="8dp"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/intrests_background_button"
                         android:includeFontPadding="false"
                         android:fontFamily="@font/poppins_medium"
                         android:textAllCaps="false"
                         style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/animation" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:drawablePadding="4dp"
                         app:backgroundTint="#FFDD00"
                         android:elevation="8dp"
                         android:drawableEnd="@drawable/chef_icon"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/intrests_background_button"
                         android:includeFontPadding="false"
                         android:fontFamily="@font/poppins_medium"
                         android:textAllCaps="false"
                         style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/cooking" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         app:backgroundTint="#FF7D00"
                         android:elevation="8dp"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/intrests_background_button"
                         android:includeFontPadding="false"
                         android:fontFamily="@font/poppins_medium"
                         android:textAllCaps="false"
                         style="?android:attr/buttonBarButtonStyle"
                         android:id="@+id/coding_button"
                         android:text="@string/coding" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:drawablePadding="4dp"
                         app:backgroundTint="#FF006D"
                         android:elevation="8dp"
                         android:drawableEnd="@drawable/photography_icon"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/intrests_background_button"
                         android:includeFontPadding="false"
                         android:fontFamily="@font/poppins_medium"
                         android:textAllCaps="false"
                         style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/photography" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         app:backgroundTint="#ADFF02"
                         android:elevation="8dp"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/intrests_background_button"
                         android:includeFontPadding="false"
                         android:fontFamily="@font/poppins_medium"
                         android:textAllCaps="false"
                         style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/traveling" />

                    <Button
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         app:backgroundTint="#8F00FF"
                         android:elevation="8dp"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/intrests_background_button"
                         android:includeFontPadding="false"
                         android:fontFamily="@font/poppins_medium"
                         android:textAllCaps="false"
                         style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/gaming" />

                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:scrollbars="none"
         android:fadingEdge="vertical"
         android:clipToPadding="false"
         android:fadingEdgeLength="24dp"
         android:overScrollMode="never">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="20sp"
                 android:textColor="@android:color/white"
                 android:layout_marginTop="8dp"
                 android:text="@string/bio" />

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:includeFontPadding="false"
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="@android:color/white"
                 android:text="@string/bio_dis" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>